src/objects/FinServ__FinancialHolding__c.object
<CustomObject>
    <description>A holding within a client&apos;s investment account.</description>
    <fields>
        <fullName>FinServ__AssetCategoryName__c</fullName>
        <description>Market capitalization and investing style</description>
        <label>Asset Category Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Growth</fullName>
                </value>
                <value>
                    <fullName>Large Value</fullName>
                </value>
                <value>
                    <fullName>Large Blend</fullName>
                </value>
                <value>
                    <fullName>Small Growth</fullName>
                </value>
                <value>
                    <fullName>Small Value</fullName>
                </value>
                <value>
                    <fullName>Small Blend</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Growth</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Value</fullName>
                </value>
                <value>
                    <fullName>Mid-Cap Blend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetCategory__c</fullName>
        <description>Subcategory of asset type.</description>
        <label>Asset Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Equity</fullName>
                </value>
                <value>
                    <fullName>Sector Equity</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>International Equity</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Taxable Bond</fullName>
                </value>
                <value>
                    <fullName>Municipal Bond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AssetClass__c</fullName>
        <description>Major category of asset type.</description>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Cash Equivalents</fullName>
                </value>
                <value>
                    <fullName>Alternative Investments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Holdings</relationshipLabel>
        <relationshipName>FinancialHoldings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FinServ__GainLoss__c</fullName>
        <description>Change in value since purchase.</description>
        <inlineHelpText>Change in value since purchase.</inlineHelpText>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Holdings</relationshipLabel>
        <relationshipName>HouseholdFinancialHoldings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__MarketValue__c</fullName>
        <description>Current market value.</description>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PercentChange__c</fullName>
        <description>Percent change in value since purchase.</description>
        <label>Percent Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndustriesIndividual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Financial Holdings</relationshipLabel>
        <relationshipName>ClientFinancialHoldings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PurchasePrice__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Securities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symbol</label>
        <referenceTo>FinServ__Securities__c</referenceTo>
        <relationshipLabel>Securities</relationshipLabel>
        <relationshipName>Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Shares__c</fullName>
        <label>Shares</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Symbol__c</fullName>
        <description>Ticker symbol for the securities held. The value is copied from Securities__c and can&apos;t be changed.</description>
        <formula>FinServ__Securities__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symbol</label>
        <type>Text</type>
    </fields>
    <label>Financial Holding</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Securities__c</columns>
        <columns>FinServ__MarketValue__c</columns>
        <columns>FinServ__LastUpdated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Holding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Holdings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>